# sam3_mlx

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  UPSTREAM.md  pyproject.toml
.github/: CODEOWNERS
docs/audit/: mlx-port-audit.md
examples/: __init__.py  sam3_image_interactive.ipynb  sam3_image_predictor_example.ipynb  visualization.py
mlx_sam3p1/: __init__.py  model_builder.py
mlx_sam3p1/model/: __init__.py  decoder.py  encoder.py  geometry_encoders.py  maskformer_segmentation.py  necks.py  roi_align.py  sam3_image.py  sam3_image_processor.py  text_encoder_ve.py  tokenizer_ve.py  vitdet.py  vl_combiner.py
sam3_mlx/: __init__.py  _device.py  _unsupported.py  convert.py  logger.py  mlx_runtime.py  model_builder.py  rle.py  visualization_utils.py
sam3_mlx/agent/: __init__.py  _unsupported.py  agent_core.py  client_llm.py  client_sam3.py  inference.py  viz.py
sam3_mlx/agent/helpers/: __init__.py  boxes.py  color_map.py  keypoints.py  mask_overlap_removal.py  masks.py  memory.py  rle.py  roi_align.py  rotated_boxes.py  som_utils.py  visualizer.py  zoom_in.py
sam3_mlx/eval/: __init__.py  _unsupported.py  cgf1_eval.py  coco_eval.py  coco_eval_offline.py  coco_reindex.py  coco_writer.py  conversion_util.py  demo_eval.py  postprocessors.py  saco_veval_eval.py  saco_veval_evaluators.py  ytvis_coco_wrapper.py  ytvis_eval.py
sam3_mlx/eval/hota_eval_toolkit/: __init__.py  run_ytvis_eval.py
sam3_mlx/eval/teta_eval_toolkit/: __init__.py  _timing.py  config.py  eval.py  utils.py
sam3_mlx/model/: __init__.py  act_ckpt_utils.py  box_ops.py  data_misc.py  decoder.py  edt.py  encoder.py  geometry_encoders.py  grid_sample_mlx.py  io_utils.py  maskformer_segmentation.py  memory.py  model_misc.py  multiplex_mask_decoder.py  multiplex_utils.py  necks.py  position_encoding.py  roi_align.py  sam1_task_predictor.py  sam3_base_predictor.py  sam3_image.py  sam3_image_processor.py  sam3_multiplex_base.py  sam3_multiplex_detector.py  sam3_multiplex_detector_utils.py  sam3_multiplex_tracking.py  sam3_multiplex_video_predictor.py  sam3_tracker_base.py  sam3_tracker_utils.py  sam3_tracking_predictor.py  sam3_video_base.py  sam3_video_inference.py  sam3_video_predictor.py  text_encoder_ve.py  tokenizer_ve.py  video_tracking_multiplex.py  video_tracking_multiplex_demo.py  vitdet.py  vl_combiner.py
sam3_mlx/model/utils/: __init__.py  misc.py  sam1_utils.py  sam2_utils.py
sam3_mlx/perflib/: __init__.py  associate_det_trk.py  compile.py  connected_components.py  fa3.py  fused.py  iou.py  masks_ops.py  nms.py
sam3_mlx/perflib/triton/: nms.py  (+2 more)
sam3_mlx/sam/: __init__.py  common.py  mask_decoder.py  prompt_encoder.py  rope.py  transformer.py
sam3_mlx/train/: __init__.py  _unsupported.py  masks_ops.py  matcher.py  nms_helper.py  train.py  trainer.py
tests/: README.md  _paths.py  test_geometry_encoders.py  test_sam3_image_processor_contract.py
tests/api/: test_api_compatibility.py  test_public_api_surfaces.py
tests/checkpoint/: test_checkpoint_layout.py  test_checkpoint_loading.py
tests/image/: test_maskformer_segmentation.py  test_sam1_interactive_predictor.py  test_sam3_image_processor.py  test_vitdet_runtime.py
tests/multiplex/: test_multiplex_construct.py  test_multiplex_mask_decoder.py  test_sam3_multiplex_detector_utils.py  test_sam3_multiplex_image_base.py
tests/perflib/: test_perflib_mlx_masks.py
tests/runtime/: test_box_ops_mlx.py  test_data_misc_interpolate.py  test_decoder_contract.py  test_eval_postprocessors.py  test_fast_attention.py  test_geometry_encoders.py  test_grid_sample_mlx.py  test_mlx_runtime.py  test_rle_helpers.py  test_rope.py
tests/training/: test_train_loss_mlx.py  test_train_masks_ops.py  test_training_runtime_boundaries.py
tests/unsupported/: test_unsupported_contract.py
tests/video/: test_sam3_video_api_contract.py  test_sam3_video_base_helpers.py  test_sam3_video_inference_helpers.py
(+100 files in other folders)
