[project]
name = "sam3_mlx"
version = "0.1.0"
description = "Maintained MLX port of SAM 3.1-oriented image segmentation components."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ftfy>=6.3.1",
    "huggingface-hub>=1.1.6",
    "iopath>=0.1.10",
    "mlx>=0.30.0",
    "numpy>=2.3.5",
    "pillow>=12.2.0",
    "regex>=2025.11.3",
]

[project.optional-dependencies]
convert = [
    "torch>=2.9.1",
]
notebooks = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.3",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "requests>=2.33.0",
]
viz = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sam3_mlx", "sam3_mlx.model"]

[tool.setuptools.package-data]
sam3_mlx = ["assets/*.txt.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
    ".git",
    ".venv",
    "third_party",
]
