[project]
name = "sam3_mlx"
version = "0.1.0"
description = "Maintained MLX port of SAM 3.1-oriented image segmentation components."
readme = "README.md"
license = "LicenseRef-SAM"
license-files = ["LICENSE"]
requires-python = ">=3.13"
authors = [
    { name = "Alfredo Sandoval" },
]
keywords = [
    "sam3",
    "segment-anything",
    "segmentation",
    "mlx",
    "apple-silicon",
    "computer-vision",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "ftfy>=6.3.1",
    "huggingface-hub>=1.1.6",
    "mlx>=0.30.0",
    "numpy>=2.3.5",
    "pillow>=12.2.0",
    "regex>=2025.11.3",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.10.8",
]

[project.urls]
Homepage = "https://github.com/Alfredo-Sandoval/sam3_mlx"
Repository = "https://github.com/Alfredo-Sandoval/sam3_mlx"
Issues = "https://github.com/Alfredo-Sandoval/sam3_mlx/issues"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sam3_mlx", "sam3_mlx.*"]
exclude = [
    "sam3_mlx.agent",
    "sam3_mlx.agent.*",
    "sam3_mlx.eval",
    "sam3_mlx.eval.*",
    "sam3_mlx.train",
    "sam3_mlx.train.*",
    "sam3_mlx.perflib.triton",
    "sam3_mlx.perflib.triton.*",
]

[tool.setuptools.package-data]
sam3_mlx = ["assets/*.txt.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
norecursedirs = [
    ".git",
    ".venv",
    "third_party",
]
